# DigitalStudentIDCard

DigitalStudentIDCard/: .firebaserc  README.md  angular.json  firebase.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
DigitalStudentIDCard/src/: index.html
DigitalStudentIDCard/src/app/: app-routing.module.ts  app.component.ts  app.module.ts  globals.ts  router-guard.ts
DigitalStudentIDCard/src/app/login/: login.component.css  login.component.spec.ts  login.component.ts  logingRes.ts  user.ts
DigitalStudentIDCard/src/app/student-card/: student-card.component.css  student-card.component.html  student-card.component.ts  student.service.ts  student.ts  verify.service.ts
DigitalStudentIDCard/src/app/verification/: verification.component.css  verification.component.html  verification.component.spec.ts  verification.component.ts  verify.service.spec.ts  verify.service.ts  verifyRes.ts
backend-test/cloud.api/: cloud.api.sln
backend-test/cloud.api/cloud.api/: Program.cs  Student.cs  StudentModel.cs
backend-test/cloud.api/cloud.api/Controllers/: PrimeController.cs
backend-test/cloud.api/cloud.api/Properties/: launchSettings.json
mob_studentpass/: Cargo.toml  README.md
mob_studentpass/login/: Cargo.toml
mob_studentpass/login/src/: lib.rs  lib_error.rs  time.rs  token.rs  user.rs
mob_studentpass/src/: db.rs  error.rs  main.rs  routes.rs  user.rs
src/: index.html
src/app/: app-routing.module.ts  app.component.spec.ts
src/app/student-card/: student-card.component.css
