[package]
name = "student_pass"
version = "0.1.0"
edition = "2021"
authors = ["Danny Redenius"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.2.1"
jsonwebtoken = "7"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
chrono = { version = "*", features = ["serde"] }
log = "0.4"
pretty_env_logger = "0.4"
lazy_static = "1.4.0"
# sql toolkit
sqlx = { version = "0.5.10", features = [ "chrono", "json", "postgres", "runtime-tokio-rustls", "uuid", "decimal" ] }
# error derive macro
thiserror = "1.0.30"
futures-util = "0.3.19"
# i/o for asynchronous applications
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
# web server framework
warp = "0.3.2"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
login = { path = "login"}
rust_decimal = "1.21"
rust_decimal_macros = "1.21"
ldap3 = "0.10.5"
md5 = "0.7.0"
